2250: - Add NativePackage abstraction for package manager installations - Add install and uninstall command generation to NativePackageManager - refactor GlobalToolCommandlet, Pgadmin and docker accordingly