@@ -3,8 +3,6 @@ package com.devonfw.tools.ide.tool.pgadmin;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -12,8 +10,8 @@ import com.devonfw.tools.ide.common.Tag;
 import com.devonfw.tools.ide.context.IdeContext;
 import com.devonfw.tools.ide.os.WindowsHelper;
 import com.devonfw.tools.ide.tool.GlobalToolCommandlet;
+import com.devonfw.tools.ide.tool.NativePackage;
 import com.devonfw.tools.ide.tool.NativePackageManager;
-import com.devonfw.tools.ide.tool.PackageManagerCommand;
 import com.devonfw.tools.ide.tool.repository.ToolRepository;
 import com.devonfw.tools.ide.version.VersionIdentifier;
 
@@ -33,42 +31,22 @@ public class PgAdmin extends GlobalToolCommandlet {
   }
 
   @Override
-  protected List<PackageManagerCommand> getInstallPackageManagerCommands() {
+  public List<NativePackage> getNativePackages() {
 
     String edition = getConfiguredEdition();
     ToolRepository toolRepository = getToolRepository();
     VersionIdentifier configuredVersion = getConfiguredVersion();
-    String resolvedVersion = toolRepository.resolveVersion(this.tool, edition, configuredVersion, this).toString();
+    String version = toolRepository.resolveVersion(this.tool, edition, configuredVersion, this).toString();
 
-    PackageManagerCommand packageManagerCommand = new PackageManagerCommand(NativePackageManager.APT, List.of(
-        "curl -fsS https://www.pgadmin.org/static/packages_pgadmin_org.pub | "
-            + "sudo gpg --yes --dearmor -o /usr/share/keyrings/packages-pgadmin-org.gpg",
-        "sudo sh -c 'echo \"deb [signed-by=/usr/share/keyrings/packages-pgadmin-org.gpg] "
-            + "https://ftp.postgresql.org/pub/pgadmin/pgadmin4/apt/$(lsb_release -cs) pgadmin4 main\" "
-            + "> /etc/apt/sources.list.d/pgadmin4.list && apt update'", String.format(
-            "sudo apt install -y --allow-downgrades pgadmin4=%1$s pgadmin4-server=%1$s pgadmin4-desktop=%1$s pgadmin4-web=%1$s",
-            resolvedVersion)));
-    return List.of(packageManagerCommand);
-  }
-
-  @Override
-  public void uninstall() {
-
-    if (this.context.getSystemInfo().isLinux()) {
-      runWithPackageManager(false, getPackageManagerCommandsUninstall());
-    } else {
-      super.uninstall();
-    }
-  }
-
-  private List<PackageManagerCommand> getPackageManagerCommandsUninstall() {
-
-    List<PackageManagerCommand> pmCommands = new ArrayList<>();
-
-    pmCommands.add(new PackageManagerCommand(NativePackageManager.APT,
-        Arrays.asList("sudo apt -y autoremove pgadmin4 pgadmin4-server pgadmin4-desktop pgadmin4-web")));
-
-    return pmCommands;
+    return List.of(new NativePackage(
+        NativePackageManager.APT,
+        List.of("pgadmin4", "pgadmin4-server", "pgadmin4-desktop", "pgadmin4-web"),
+        version,
+        List.of("--allow-downgrades"),
+        List.of("curl -fsS https://www.pgadmin.org/static/packages_pgadmin_org.pub | sudo gpg --yes --dearmor -o /usr/share/keyrings/packages-pgadmin-org.gpg",
+            "sudo sh -c 'echo \"deb [signed-by=/usr/share/keyrings/packages-pgadmin-org.gpg] https://ftp.postgresql.org/pub/pgadmin/pgadmin4/apt/$(lsb_release -cs) pgadmin4 main\" > /etc/apt/sources.list.d/pgadmin4.list && apt update'"),
+        List.of("sudo rm -f /etc/apt/sources.list.d/pgadmin4.list", "sudo rm -f /usr/share/keyrings/packages-pgadmin-org.gpg")
+    ));
   }
 
   @Override
@@ -85,6 +63,15 @@ public class PgAdmin extends GlobalToolCommandlet {
       }
     }
     return null;
+  }
+
+  @Override
+  public VersionIdentifier getInstalledVersion() {
+    if (!isCommandAvailable(getBinaryName())) {
+      return null;
+    }
+    String output = this.context.newProcess().runAndGetSingleOutput(getBinaryName(), "--version");
+    return VersionIdentifier.of(output.replace("pgAdmin 4", "").trim());
   }
 
   private Path getExecutableFolderFromWindowsRegistry() {
